Added spring batch changes

--- a/batch-practice/src/main/resources/application.properties
+++ b/batch-practice/src/main/resources/application.properties
@@ -22,3 +22,7 @@ logging.level.io.undertow=WARN
 spring.activemq.in-memory=false
 spring.activemq.pool.enable=false
 active-mq-url=tcp://localhost:61616
+
+#BATCH-CONFIG
+spring.batch.initialize-schema=ALWAYS
+spring.batch.job.enabled=false
